# rust_ecommerce

./: Cargo.toml  database.txt
services/api/: .env  Cargo.toml  build.rs  database.txt
services/api/migrations/: 20250101000000_init.sql  20251228174047_products.sql  20251228175247_userid.sql
services/api/src/: dtos.rs  error.rs  grpc_client.rs  main.rs  model.rs
services/api/src/utils/: hash.rs
services/api/src/web/: auth.rs  category.rs  mod.rs  mw.rs  product.rs
services/notification/: Cargo.toml
services/notification/src/: main.rs
shared/proto/: notification.proto
src/: config.rs  dtos.rs  main.rs  model.rs
src/utils/: jwt.rs
src/web/: mod.rs  post.rs  product.rs
