[workspace]
resolver = "2"
members = [
    "services/api",
    "services/notification",
]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true