[package]
name = "my_rest"
version = "0.1.0"
edition = "2021"
default-run = "my_rest"

[dependencies]
axum = "0.8.8"
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.34", features = ["serde-float"] }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.12"